--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<b>app.okame.ru</b>
+<!DOCTYPE HTML>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/apps.css">
+    <title>APPS ☺</title>
+  </head>
+  <body>
+    <font face="Calibri" color="#444"><b>APP.OKAME.RU</b></font>
+  </body>
+</html>
