--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>APPS ☺</title>
   </head>
   <body>
-    <font face="Calibri" color="#444"><b>APP.OKAME.RU</b></font>
+    <header>APPS ☺</header>
+    <section>
+      This is content text and nothing else. Just like a "fish text" named as Lorem Ipsum...<br/>
+      Fish text was created to fill page of your book or website with randomed text in latin.
+      <a href="http://okame.ru">We are going back!</a>
+    </section>
   </body>
 </html>
