--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <body>
     <header>APPS ☺</header>
     <section>
+      <div class="cntc">
       This is content text and nothing else. Just like a "fish text" named as Lorem Ipsum...<br/>
       Fish text was created to fill page of your book or website with randomed text in latin.
       <a href="http://okame.ru">We are going back!</a>
+      </div>
     </section>
   </body>
 </html>
